--- a/Rmarkdown/materiel/rmarkdown_session.Rmd
+++ b/Rmarkdown/materiel/rmarkdown_session.Rmd
@@ -12,7 +12,7 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-[Retour à la page d'accueil](https://scortijo.github.io/2021_L3_R/)
+[Retour à la page d'accueil](https://scortijo.github.io/2022_L3_R/)
 
 # Introduction à ``Rmarkdown``
 
@@ -29,11 +29,11 @@ Nous allons illustrer les possibilités offertes par ce langage en faisant une c
 
 
 
-## Pourquoi utliliser du Rmarkdown?
+## Pourquoi utiliser du Rmarkdown?
 
 + Ce format permet la **communication** de méthodes et de résultats de manière claire et commentée, particulièrement à des non spécialistes de l'informatique ou des statistiques.
 
-+ La **reproductibilité** des analyses est garantie, car le code ayant généré les résultats montrés est présent, et peut être réexécuté par toute personne possédant le document.
++ La **reproductibilité** des analyses est garantie, car le code ayant généré les résultats montrés est présent, et peut être ré-exécuté par toute personne possédant le document.
 
 En résumé, ce format favorise l'intégrité scientifique des travaux de recherche impliquant du code R.
 
@@ -79,7 +79,7 @@ Personnalisez l'entête YAML pour y ajouter votre nom, la date, et le titre du d
 > **Challenge** A votre avis, comment faut-il modifier le document pour avoir un document compilé en PDF et non HTML? (Vous pouvez faire cette modification, compiler pour voir la différence sur le fichier compilé, mais revenez sur du HTML pour la suite du TP).
 
 
-Observez la première ligne du premier chunk de code. Un chunk prend en option le langage utilisé (`r`), un nom éventuel (ici `setup`), ainsi qu'un certain nombre de paramètres. Par example, ```include = FALSE``` ne fait pas apparaître le code ni les résultats dans le document fini. ```echo = FALSE``` montre les sorties du code mais pas le code lui même. 
+Observez la première ligne du premier chunk de code. Un chunk prend en option le langage utilisé (`r`), un nom éventuel (ici `setup`), ainsi qu'un certain nombre de paramètres. Par exemple, ```include = FALSE``` ne fait pas apparaître le code ni les résultats dans le document fini. ```echo = FALSE``` montre les sorties du code mais pas le code lui même. 
 Cela explique pourquoi on ne voit pas le contenu du premier chunk de code dans le document compilé. Toutes les options de chunks sont décrites dans la [documentation de Rmarkdown](https://rstudio.com/wp-content/uploads/2015/03/rmarkdown-reference.pdf?_ga=2.116494478.901299713.1598125979-1765392125.1580035352).
 
 Le premier chunk doit être conservé. Sa fonction `knitr::opts_chunk$set` permet de configurer des options communes aux chunks du document. En l'occurrence, par défaut, cette fonction impose ```echo = TRUE``` pour tous les chunks du document. Cela fera apparaître dans le document compilé le code ayant généré l'output (à part si vous spécifiez explicitement le contraire dans les options d'un chunk en particulier).
@@ -145,13 +145,13 @@ Pour illustrer le sujet d'étude, on se propose d'inclure un image de fleurs d'A
 # Import et affichage des données avec `datatable`
 
 Créez maintenant une nouvelle section intitulée "Analyse de la floraison", et une sous-section "Import et affichage des données".
-Créez un nouveau chunk ( `avec Ctrl + Alt + I`, ou sous OS X: `Cmd + Option + I`, ou avec le bouton de l'interface ![](./Images/newChunk.PNG)). A l'intérieur, importez le jeu de données `session5_rmarkdown/data/burghardt_et_al_2015_expt1.txt` comme appris dans les séances précédantes, avec une fonction adaptée au type du fichier (attention, vous devez naviguer jusqu'au fichier de données depuis le répertoire de travail, qui est le répertoire qui contient votre document Rmarkdown).
+Créez un nouveau chunk ( `avec Ctrl + Alt + I`, ou sous OS X: `Cmd + Option + I`, ou avec le bouton de l'interface ![](./Images/newChunk.PNG)). A l'intérieur, importez le jeu de données `session5_rmarkdown/data/burghardt_et_al_2015_expt1.txt` comme appris dans les séances précédentes, avec une fonction adaptée au type du fichier (attention, vous devez naviguer jusqu'au fichier de données depuis le répertoire de travail, qui est le répertoire qui contient votre document Rmarkdown).
 
 Exécutez le chunk. Vous devriez voir apparaître en dessous un aperçu de la sortie de la fonction d'import des données si elle retourne des messages. Si vous ne souhaitez pas voir apparaître ces messages dans le document compilé, donnez un argument au chunk afin de supprimer les messages générés par le code R : `message=FALSE`. Recompilez pour vérifier le résultat.
 
-> **Challenge** Supprimez également les messages du chunk de setup relatifs à l'import des libraries
+> **Challenge** Supprimez également les messages du chunk de setup relatifs à l'import des librairies
 
-Nous souhaitons maintenant montrer les données brutes au lecteur du rapport. Dans le chunk d'import des données, vous pouvez appliquer les fonctions que vous souhaitez pour inspecter les données, comme vu dans les séances précédantes (pour avoir un aperçu des stypes de données contenus dans le dataframe, par exemple).
+Nous souhaitons maintenant montrer les données brutes au lecteur du rapport. Dans le chunk d'import des données, vous pouvez appliquer les fonctions que vous souhaitez pour inspecter les données, comme vu dans les séances précédentes (pour avoir un aperçu des styles de données contenus dans le dataframe, par exemple).
 
 Nous aimerions maintenant exposer les données brutes au lecteur du rapport.
 Affichez les données de manière simple, en écrivant dans le chunk :
@@ -181,7 +181,7 @@ L'option `pageLength` permet d'afficher 10 lignes des données par page de table
 
 ## Création d'un graphique
 
-Nous allons maintenant réaliser une visualisation des données de floraison. Créez une sous-section "Visualisation des données de floraison". Annoncez en markdown dans cette sous-sectoin que vous allez retirer les valeurs manquantes, et faites-le dans un chunk au dessous. 
+Nous allons maintenant réaliser une visualisation des données de floraison. Créez une sous-section "Visualisation des données de floraison". Annoncez en markdown dans cette sous-section que vous allez retirer les valeurs manquantes, et faites-le dans un chunk au dessous. 
 
 Puis, décrivez la visualisation que vous souhaitez faire. Ici, nous allons montrer le nombre de feuilles des rosettes (variable `rosette.leaf.num`) en fonction du nombre de jours jusqu'à floraison (variable `days.to.flower`), et séparer les observations par une couleur correspondant à la photopériode (variable `day.length`). Réalisez ce graphe avec `ggplot2` (n'oubliez pas de lui donner un titre) dans un nouveau chunk.
 
@@ -205,7 +205,7 @@ L'image est de taille assez petite. Grâce aux options de chunk, il va nous êtr
 
 Note : cela pourrait être fait de manière globale au document en ajoutant des paramètres  à ```knitr::opts_chunk$set(echo = TRUE)``` dans le tout premier chunk.
 
-Recompliez le document pour vérifier que le changement de taille et l'ajout de la légende ont bien eu lieu.
+Recompilez le document pour vérifier que le changement de taille et l'ajout de la légende ont bien eu lieu.
 
 
 
@@ -290,7 +290,7 @@ output:
   
 #   <span style="color: blue;">A faire pour la prochaine séance </span>
 
-A partir de ce que nous avons vu aujourd'hui, choisissez le script `.R` d'une session précédante, comme celui de la séance 3 consacrée à réorganisation des données, et créez un rapport en `Rmarkdown` à partir de ce script. Vous pouvez par exemple créer un chunk par question ou notion principale de la séance, décrire la démarche et ce que fait chaque chunk, et créer une architecture (sections, sous-sections) pertinente au rapport.
+A partir de ce que nous avons vu aujourd'hui, choisissez le script `.R` d'une session précédente, comme celui de la séance 3 consacrée à réorganisation des données, et créez un rapport en `Rmarkdown` à partir de ce script. Vous pouvez par exemple créer un chunk par question ou notion principale de la séance, décrire la démarche et ce que fait chaque chunk, et créer une architecture (sections, sous-sections) pertinente au rapport.
 
 # Extras
 
@@ -312,4 +312,4 @@ A partir de ce que nous avons vu aujourd'hui, choisissez le script `.R` d'une se
 
 -------
 
-[Retour à la page d'accueil](https://scortijo.github.io/2021_L3_R/)
+[Retour à la page d'accueil](https://scortijo.github.io/2022_L3_R/)
