--- a/session2_ggplot/materiel/ggplot_session.Rmd
+++ b/session2_ggplot/materiel/ggplot_session.Rmd
@@ -270,7 +270,7 @@ ggplot(expt1, aes(genotype, rosette.leaf.num)) +
 
 >**Exercice 2:** Modifiez le graphique pour que les points soient devant plutôt que derrière les boxplots. 
 
->**BONUS**: Ajouter la géométrie dotplot plutôt que jitter. Utilisez l'aide (avec ?nom de fonction) pour savoir comment l'utiliser
+>**BONUS**: Ajouter la géométrie dotplot plutôt que jitter. Utilisez les exemples dans l'aide (avec ?nom de fonction) pour savoir comment l'utiliser, ou lisez [cette page de blog](http://www.sthda.com/french/wiki/ggplot2-dot-plot-guide-de-demarrage-rapide-logiciel-r-et-visualisation-de-donnees)
 
 
 ## Couleurs!
@@ -333,8 +333,10 @@ ggplot(expt1, aes(genotype, days.to.flower)) +
 >
 > Que se passe t-il si les points sont colorés en fonction de `days.to.bolt`?
 
-> **BONUS**: Dessinez un scatter plot (`geom_point()`) entre `blade.length.mm` et `rosette.leaf.num` en colorant les points en fonction de `vernalization`, et changez la couleur des points pour que "NV" soit en bleu et "V" soit en orange.
+> **BONUS**: Dessinez un scatter plot (`geom_point()`) entre `blade.length.mm` et `rosette.leaf.num` en colorant les points en fonction de `vernalization`, et changez la couleur des points pour que "NV" soit en bleu et "V" soit en vert.
+>*Aide*: Trouvez la solution en ligne (par exemple en tapant "change color points ggplot R")
 
+<br>
 
 ## Facetting
 
