--- a/session3_stats_reorganisation/materiel/reorganisation_donnees_solution_exercices.Rmd
+++ b/session3_stats_reorganisation/materiel/reorganisation_donnees_solution_exercices.Rmd
@@ -37,10 +37,13 @@ select(expt1, contains("mm"))
 > **BONUS**:    
 > 1. Sélectionnez les colonnes dont le titre finit par "bolt"   
 
-> *Aide*: Aidez vous des exemples dans l'aide de R ou cherchez dans google
+> *Aide*: Regardez les exemples dans l'aide de R ou cherchez dans google
 
 
 ```{r}
+
+# En tapant "R tidyverse select column that ends with a specific text" dans google, le 1er site (https://dplyr.tidyverse.org/reference/select.html) indique d'utiliser "ends_with" dans la fonction select
+
 select(expt1, ends_with("bolt"))
 ```
 
@@ -100,15 +103,15 @@ filter(expt1, genotype=="fca-6"  & !is.na(blade.length.mm))
 
 
 ```{r}
-# Il existe plusieurs solutions
+# Il existe plusieurs solutions. En tapant "R tidyverse filter lines containing text" dans google 
 
-# selon ce site: https://www.statology.org/filter-rows-that-contain-string-dplyr/ nous pouvons faire
+# Le 2eme site (https://www.statology.org/filter-rows-that-contain-string-dplyr/) propose de faire 
 
 expt1_col_background <- filter(expt1, grepl("Col", background))
 distinct(expt1_col_background,background)
 
 
-# selon ce site: https://sebastiansauer.github.io/dplyr_filter/ nous pouvons faire
+# Le 4eme site (https://sebastiansauer.github.io/dplyr_filter/) propose de faire
 
 expt1_col_background2 <- filter(expt1, str_detect(background, "Col"))
 distinct(expt1_col_background2,background)
